--- a/views/modals/admin-createuser.pug
+++ b/views/modals/admin-createuser.pug
@@ -1,33 +1,33 @@
 
 .modal#modal-admin-users-create
-	.modal-background
-	.modal-container
-		.modal-content
-			header.is-blue Create / Authorize User
-			section
-				label.label Email address:
-				p.control.is-fullwidth
-					input.input(type='text', placeholder='e.g. john.doe@company.com', v-model='email')
-					span.help.is-red.is-hidden This email is invalid!
-			section
-				label.label Provider:
-				p.control.is-fullwidth
-					select(v-model='provider')
-						option(value='local') Local Database
-						option(value='windowslive') Microsoft Account
-						option(value='google') Google ID
-						option(value='facebook') Facebook
-			section(v-if="provider=='local'")
-				label.label Password:
-				p.control.is-fullwidth
-					input.input(type='password', placeholder='', v-model='password')
-					span.help.is-red.is-hidden This password is invalid!
-			section(v-if="provider=='local'")
-				label.label Full Name:
-				p.control.is-fullwidth
-					input.input(type='text', placeholder='e.g. John Doe', v-model='name')
-					span.help.is-red.is-hidden This name is invalid!
-			footer
-				a.button.is-grey.is-outlined(v-on:click="cancel") Discard
-				a.button.is-blue(v-on:click="create", v-if="provider=='local'") Create User
-				a.button.is-blue(v-on:click="create", v-if="provider!='local'") Authorize User
+  .modal-background
+  .modal-container
+    .modal-content
+      header.is-blue Create / Authorize User
+      section
+        label.label Email address:
+        p.control.is-fullwidth
+          input.input(type='text', placeholder='e.g. john.doe@company.com', v-model='email')
+          span.help.is-red.is-hidden This email is invalid!
+      section
+        label.label Provider:
+        p.control.is-fullwidth
+          select(v-model='provider')
+            option(value='local') Local Database
+            option(value='windowslive') Microsoft Account
+            option(value='google') Google ID
+            option(value='facebook') Facebook
+      section(v-if='provider=="local"')
+        label.label Password:
+        p.control.is-fullwidth
+          input.input(type='password', placeholder='', v-model='password')
+          span.help.is-red.is-hidden This password is invalid!
+      section(v-if='provider=="local"')
+        label.label Full Name:
+        p.control.is-fullwidth
+          input.input(type='text', placeholder='e.g. John Doe', v-model='name')
+          span.help.is-red.is-hidden This name is invalid!
+      footer
+        a.button.is-grey.is-outlined(v-on:click='cancel') Discard
+        a.button.is-blue(v-on:click='create', v-if='provider=="local"') Create User
+        a.button.is-blue(v-on:click='create', v-if='provider!="local"') Authorize User
