Create / Authorize User feature

--- a/views/error-forbidden.pug
+++ b/views/error-forbidden.pug
@@ -27,3 +27,4 @@ html
       h1 Forbidden
       h2 Sorry, you don't have the necessary permissions to access this page.
       a.button.is-amber.is-inverted(href='/') Go Home
+      a.button.is-amber.is-inverted(href='/login') Login as...
