System Settings UI + code cleanup

--- a/views/pages/admin/_layout.pug
+++ b/views/pages/admin/_layout.pug
@@ -49,7 +49,7 @@ block content
                 li
                   a(href='/admin/settings')
                     i.icon-cog
-                    span Site Settings
+                    span System Settings
               li
                 a(href='/logout')
                   i.icon-delete2
