--- a/views/pages/admin/users.pug
+++ b/views/pages/admin/users.pug
@@ -43,6 +43,12 @@ block adminContent
                 when 'facebook'
                   i.icon-facebook.is-purple
                   | Facebook
+                when 'github'
+                  i.icon-github.is-blue-grey
+                  | GitHub
+                when 'slack'
+                  i.icon-slack.is-purple
+                  | Slack
                 default: i.icon-warning
             td.is-centered= userMoment(usr.createdAt).format('lll')
             td.is-centered= userMoment(usr.updatedAt).format('lll')
