Fix for Search index not updated during create

--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -61,9 +61,9 @@ block content
           aside.stickyscroll(data-margin-top=40)
             .sidebar-label
               i.icon-th-list
-              span Contents
+              span Page Contents
             ul.sidebar-menu
-              li: a(href='#root', title='Start') Start
+              li: a(href='#root', title='Top of Page') Top
               +tocMenu(pageData.tree)
 
         .column
