Bug fixes + interactive setup UI

--- a/views/pages/admin/profile.pug
+++ b/views/pages/admin/profile.pug
@@ -30,7 +30,7 @@ block adminContent
               i.icon-check
               span Save Changes
         .column
-          .panel
+          .panel-aside
             label.label Provider
             p.control.account-profile-provider
               case user.provider
