--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -63,7 +63,7 @@ block content
               i.icon-th-list
               span Page Contents
             ul.sidebar-menu
-              li: a(href='#root', title='Top of Page') Top
+              li: a(href='#root', title='Top of Page') Top of Page
               +tocMenu(pageData.tree)
 
         .column
