--- a/views/pages/admin/profile.pug
+++ b/views/pages/admin/profile.pug
@@ -40,6 +40,7 @@ block adminContent
                 when 'facebook': i.icon-facebook.is-indigo
                 when 'github': i.icon-github.is-grey
                 when 'slack': i.icon-slack.is-purple
+                when 'ldap': i.icon-arrow-repeat-outline
                 default: i.icon-warning
               = t('auth:providers.' + user.provider)
             label.label Member since
