--- a/views/pages/admin/users.pug
+++ b/views/pages/admin/users.pug
@@ -49,6 +49,9 @@ block adminContent
                 when 'slack'
                   i.icon-slack.is-purple
                   | Slack
+                when 'ldap'
+                  i.icon-arrow-repeat-outline
+                  | LDAP / Active Directory
                 default: i.icon-warning
             td.is-centered= userMoment(usr.createdAt).format('lll')
             td.is-centered= userMoment(usr.updatedAt).format('lll')
