--- a/client/scss/configure.scss
+++ b/client/scss/configure.scss
@@ -36,6 +36,9 @@ i.icon-check {
 i.icon-square-cross {
   color: mc('red', '500')
 }
+i.icon-warning-outline {
+  color: mc('orange', '500')
+}
 
 .tst-welcome-leave-active, .tst-welcome-enter-active {
   transition: all .5s;
