--- a/views/configure/index.pug
+++ b/views/configure/index.pug
@@ -54,7 +54,12 @@ html
                   i(v-if='loading')
                 .panel-content.is-text
                   p(v-if='loading') #[i.icon-loader.animated.rotateIn.infinite] Checking your system for compatibility...
-                  p(v-if='!loading && syscheck.ok') #[i.icon-check] Looks great! No issues so far.
+                  p(v-if='!loading && syscheck.ok')
+                    ul
+                      li(v-for='rs in syscheck.results') #[i.icon-check] {{rs}}
+                  p(v-if='!loading && syscheck.ok')
+                    i.icon-check
+                    strong  Looks good! No issues so far.
                   p(v-if='!loading && !syscheck.ok') #[i.icon-square-cross] Error: {{ syscheck.error }}
                 .panel-footer
                   button.button.is-indigo.is-outlined(v-on:click='proceedToWelcome', v-bind:disabled='loading') Back
@@ -90,6 +95,32 @@ html
                       p.desc The language in which navigation, help and other UI elements will be displayed.
                 .panel-footer
                   button.button.is-indigo.is-outlined(v-on:click='proceedToSyscheck', v-bind:disabled='loading') Back
+                  button.button.is-indigo(v-on:click='proceedToConsiderations', v-bind:disabled='loading') Continue
+
+            template(v-else-if='state === "considerations"')
+              .panel
+                h2.panel-title.is-featured
+                  span Important Considerations
+                  i(v-if='loading')
+                .panel-content.is-text
+                  h3 Is Wiki.js going to be behind a web server (e.g. nginx / apache / IIS) or proxy?
+                  p
+                    ul
+                      li - Make sure the upload limit is sufficient. Most web servers have a low limit (e.g. 2 MB) by default.
+                      li - Make sure your web server is configured to allow web sockets. Wiki.js will fallback to standard XHR queries if not available.
+                      li - Do not rewrite URLs after the domain. This can cause unexpected issues in Wiki.js navigation.
+                      li - Do not remove or alter the client IP when proxying the requests. This can cause the authentication brute force protection to engage unexpectedly.
+                  template(v-if='considerations.https')
+                    h3 The site will not be using HTTPS? #[i.icon-warning-outline.animated.fadeOut.infinite]
+                    p The host URL you specified is not HTTPS. It is highly recommended to use HTTPS. You must use a web server / proxy (e.g. nginx / apache / IIS) in front of Wiki.js to use HTTPS. Wiki.js does not provide HTTPS handling by itself.
+                  template(v-if='considerations.port')
+                    h3 You are using a non-standard port.
+                    p If you are not planning on using a web server / proxy in front of Wiki.js, be aware that users will need to specify the port when accessing the wiki. Make sure this is the intended behavior. Otherwise set a standard HTTP port such as 80.
+                  template(v-if='considerations.localhost')
+                    h3 Are you sure you want to use localhost as the host base URL? #[i.icon-warning-outline.animated.fadeOut.infinite]
+                    p The host URL you specified is localhost. Unless you are a developer running Wiki.js locally on your machine, this is not recommended!
+                .panel-footer
+                  button.button.is-indigo.is-outlined(v-on:click='proceedToGeneral', v-bind:disabled='loading') Back
                   button.button.is-indigo(v-on:click='proceedToDb', v-bind:disabled='loading') Continue
 
             template(v-else-if='state === "db"')
@@ -104,7 +135,7 @@ html
                       input(type='text', placeholder='e.g. mongodb://localhost:27017/wiki', v-model='conf.db')
                       p.desc The connection string to your MongoDB server. Leave the default localhost value if MongoDB is installed on the same server.
                 .panel-footer
-                  button.button.is-indigo.is-outlined(v-on:click='proceedToGeneral', v-bind:disabled='loading') Back
+                  button.button.is-indigo.is-outlined(v-on:click='proceedToConsiderations', v-bind:disabled='loading') Back
                   button.button.is-indigo(v-on:click='proceedToSyscheck', v-bind:disabled='loading') Connect
 
       footer.footer
